[package]
authors = ["Henrik Tougaard <henrik@adaptagency.com>"]
name = "axum-otlp-honeycomb"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["cargo"] }
futures-util = "0.3"
http = "1"
opentelemetry = { version = "0.29", features = [
    "trace",
], default-features = false }
opentelemetry-appender-tracing = "0.29"
opentelemetry-http = "0.29"
opentelemetry-otlp = { version = "0.29", features = [
    "reqwest-blocking-client",
    "reqwest-rustls",
    "http-proto",
    "logs",
], default-features = false }
opentelemetry_sdk = { version = "0.29", features = [
    "trace",
    "rt-tokio",
], default-features = false }
pin-project-lite = "0.2"
tower = "0.5"
tracing = "0.1"
tracing-core = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
